fix(slash): remove overflow: auto on HeaderTitle

--- a/slash/css/src/Layout/Header/HeaderTitle/HeaderTitle.scss
+++ b/slash/css/src/Layout/Header/HeaderTitle/HeaderTitle.scss
@@ -9,7 +9,6 @@
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
-  overflow: auto;
   color: var(--white);
   background: var(--axablue80);
 
